Fixed icons alignment

--- a/src/css/chat-styles.css
+++ b/src/css/chat-styles.css
@@ -298,6 +298,7 @@
 	display: block;
 	position: relative;
 	text-shadow: 0 0 3px #666;
+	line-height: 0;
 }
 
 #prudio-button .prd-icon-btn-bubble {
@@ -326,8 +327,8 @@
 
 #prudio-button .prd-icon-btn-help {
 	font-size: 21.6px;
-	top: 2px;
-	left: 3.2px;
+	top: 10px;
+	left: 9.5px;
 }
 
 /* General styles for all menus */
